--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,32 +1,29 @@
 <section class="container container-about">
     <div class="row">
         <div class="col-md-12">
-            <h1>La creatividad no es talento sino actitud.</h1>
+            <h1>La creatividad no es talento sino actitud</h1>
         </div>
 	    <div class="container">
 
 	        <div class="row">
 	            <div class="col-md-12">
 			        <p class="text-primary"># Steinsel</p>
-			        - [Centrocampista - 18/19] (Poussins)
-			        - 1 Categoria superior a su edad
+			        <p>- [Centrocampista - 18/19] (Poussins)</p>
+			        <p>- 1 Categoria superior a su edad</p>
 	            </div>
- <p class="text-secondary">.</p>
 	            <div class="col-md-12">
 	                <p class="text-primary"># Federación Luxemburguesa Fútbol </p>
-	                - [Pre-Selecionado 18/19] (Pupilles)
+	                 <p>- [Pre-Selecionado 18/19] (Pupilles)</p>
 	            </div>
- <p class="text-secondary">.</p>
 	            <div class="col-md-12">
 	                <p class="text-primary">Ent. Syrdall</p>
-	                - [Delantero - 17/18](Poussins - Final FLF LALUX)
-	                - Mejor Jugador Torneo de invierno Junglinster
+	                 <p>- [Delantero - 17/18](Poussins - Final FLF LALUX)</p>
+	                - Mejor Jugador Torneo de invierno Junglinster</p>
 	            </div>
- <p class="text-secondary">.</p>
 	            <div class="col-md-12">
 	                <p class="text-primary"># US Sandweiler</p>
-	                - [Delantero - 15/16/17] (Bambinis)
-	                - [Mérito] (Campeones Torneos en Remich Schengen Sandweiler)
+	                <p>- [Delantero - 15/16/17] (Bambinis)</p>
+	                <p> - [Mérito] (Campeones Torneos en Remich Schengen Sandweiler)</p>
 	            </div>
 	        </div>
 		</div>
