--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
 	                 <p>- [Pre-Selecionado 18/19] (Pupilles)</p>
 	            </div>
 	            <div class="col-md-12">
-	                <p class="text-primary">Ent. Syrdall</p>
+	                <p class="text-primary"># Ent. Syrdall</p>
 	                 <p>- [Delantero - 17/18](Poussins - Final FLF LALUX)</p>
 	                - Mejor Jugador Torneo de invierno Junglinster</p>
 	            </div>
