--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,5 @@
     <script src="./web-dist/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/266c035ce0.js"></script>
     <script src="./web-dist/js/app.js"></script>
+    <link rel="icon" type="image/png" href="./web-dist/favicon.png">
 </head>
