--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,13 +6,23 @@
 	    <div class="container">
 	        <div class="row">
 	            <div class="col-md-12">
-			        <p class="text-primary"># Steinsel</p>
-			        <p>- [Centrocampista - 18/19] (Poussins)</p>
-			        <p>- 1 Categoria superior a su edad</p>
+			        <p class="text-primary"># Racing FC Union Luxembourg /Federación Luxemburguesa Fútbol</p>
+			        <p>- [Delantero - 21/22] (Minimes)</p>
+					<p>- [Equipe Nationale] U12</p>
 	            </div>
 	            <div class="col-md-12">
-	                <p class="text-primary"># Federación Luxemburguesa Fútbol </p>
-	                 <p>- [Pre-Selecionado 18/19] (Pupilles)</p>
+			        <p class="text-primary"># Racing FC Union Luxembourg / Federación Luxemburguesa Fútbol</p>
+			        <p>- [Delantero - 20/21] (Minimes)</p>
+					<p>- [Detection] U11</p>
+	            </div>
+	            <div class="col-md-12">
+			        <p class="text-primary"># Steinsel / Federación Luxemburguesa Fútbol</p>
+			        <p>- [Centrocampista - 19/20] (U)</p>
+					<p>- [Detection] U10</p>
+	            </div>
+	            <div class="col-md-12">
+			        <p class="text-primary"># Steinsel</p>
+			        <p>- [Centrocampista - 18/19] (Poussins)</p>
 	            </div>
 	            <div class="col-md-12">
 	                <p class="text-primary"># Ent. Syrdall</p>
