--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -11,6 +11,7 @@
 <!--                     frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe> -->
 			<iframe src="https://snapwidget.com/embed/{{ site.snapwidget }}" class="snapwidget-widget" allowTransparency="true"
 			                    frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:100%;"></iframe>
+             <iframe width="420" height="345" src="https://www.youtube.com/embed/0VDCHX6ps_c"></iframe>
         
         </div>
     </div>
