--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,6 +19,9 @@
                 <div class="nav-link" data-link=".container-instagram">Galería</div>
             </li>
             <li class="nav-item">
+                <div class="nav-link" data-link=".container-youtube">Videos</div>
+            </li>
+            <li class="nav-item">
                 <div class="nav-link" data-link=".container-contacts">Contacto</div>
             </li>
         </ul>
