--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -9,8 +9,8 @@
             <script src="https://snapwidget.com/js/snapwidget.js"></script>
 <!--             <iframe src="https://snapwidget.com/embed/{{ site.snapwidget-istagram }}" class="snapwidget-widget" allowTransparency="true" -->
 <!--                     frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe> -->
-			<iframe src="https://snapwidget.com/embed/{{ site.snapwidget }}" class="snapwidget-widget" allowTransparency="true"
-			                    frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:100%;"></iframe>
+			<iframe height="375" src="https://snapwidget.com/embed/{{ site.snapwidget }}" allowTransparency="true"
+			                    frameborder="0" scrolling="yes" style="border:none; overflow:hidden;width:100%;"></iframe>
         </div>
     </div>
 </section>
