--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -4,12 +4,19 @@
             <h1>Videos</h1>
         </div>
         <div class="col-md-12">
-             <iframe width="525" height="345" src="https://www.youtube.com/embed/0VDCHX6ps_c"></iframe>
-             <iframe width="525" height="345" src="https://www.youtube.com/embed/5hbeBdIzTTY"></iframe>
-             <iframe width="525" height="345" src="https://www.youtube.com/embed/gNq8mpwmHrw"></iframe>
-             <iframe width="525" height="345" src="https://www.youtube.com/embed/fXClwzEmtKk"></iframe>
-             <iframe width="525" height="345" src="https://www.youtube.com/embed/sZeN9qnxJZ8"></iframe>
-             <iframe width="525" height="345" src="https://www.youtube.com/embed/eyg2qu3GaRg"></iframe>
+             <iframe allowTransparency="true"
+             frameborder="0" scrolling="yes" style="border:none; width:100%;"
+              src="https://www.youtube.com/embed/0VDCHX6ps_c"></iframe>
+             <iframe allowTransparency="true"
+             frameborder="0" scrolling="yes" style="border:none; overflow:hidden;width:100%;" src="https://www.youtube.com/embed/5hbeBdIzTTY"></iframe>
+             <iframe allowTransparency="true"
+             frameborder="0" scrolling="yes" style="border:none; overflow:hidden;width:100%;" src="https://www.youtube.com/embed/gNq8mpwmHrw"></iframe>
+             <iframe allowTransparency="true"
+             frameborder="0" scrolling="yes" style="border:none; overflow:hidden;width:100%;" src="https://www.youtube.com/embed/fXClwzEmtKk"></iframe>
+             <iframe allowTransparency="true"
+             frameborder="0" scrolling="yes" style="border:none; overflow:hidden;width:100%;" src="https://www.youtube.com/embed/sZeN9qnxJZ8"></iframe>
+             <iframe allowTransparency="true"
+             frameborder="0" scrolling="yes" style="border:none; overflow:hidden;width:100%;" src="https://www.youtube.com/embed/eyg2qu3GaRg"></iframe>
         </div>
     </div>
 </section>
